[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-topic-miner"
version = "1.0.4"
description = "End-to-end topic clustering and summarisation for social media posts (Twitter / Reddit)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Capstone Team" }]
keywords = ["nlp", "topic-modeling", "bertopic", "social-media", "clustering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "bertopic>=0.16",
    "umap-learn>=0.5",
    "hdbscan>=0.8.29",
    "torch>=2.0",
    "torchvision>=0.15",
    "sentence-transformers>=2.7",
    "anthropic>=0.25",
    "openai>=1.0",
    "nltk>=3.8",
    "spacy>=3.7; python_version < '3.14'",
]

[project.optional-dependencies]
spacy = ["en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"]
llama = ["transformers>=4.40", "accelerate>=0.29", "bitsandbytes>=0.42"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]

[project.urls]
Repository = "https://github.com/your-org/social-topic-miner"

[tool.setuptools.packages.find]
where = ["."]
include = ["social_topic_miner*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
